Squashing a bug
Text should wrap around on short-width screens hopefully, will be deploying breakpoints once I figure out how to so things look fancy and nice for all screens. 🤝

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
   }
 
   h1, h2, p {
-    width: 864px;
+    width: auto;
     line-height: auto;
     flex: none;
   }
